feat: add renovate

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hebilicious/authjs-nuxt",
+  "name": "@hebilicious/nuxt-module-template",
   "type": "module",
   "version": "0.1.0-beta.4",
   "private": true,
