--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@hebilicious/nuxt-module-template",
   "type": "module",
-  "version": "0.1.0-beta.4",
+  "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@8.6.0",
   "scripts": {
     "build": "rimraf packages/*/dist && pnpm -r --filter=./packages/* run build",
-    "nx:build": "nx run-many --target=build --p my-module",
+    "nx:build": "nx run-many --target=build --p @hebilicious/my-module",
     "lint": "eslint --cache .",
     "lint:fix": "nr lint --fix",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
@@ -17,11 +17,13 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.4",
     "@antfu/ni": "^0.21.3",
+    "@nuxt/test-utils": "^3.5.2",
     "@types/node": "^18.16.16",
     "bumpp": "^9.1.0",
     "conventional-changelog-cli": "^2.2.2",
     "eslint": "8.42.0",
     "esno": "^0.16.3",
+    "fast-glob": "^3.2.12",
     "lint-staged": "^13.2.2",
     "nx": "^16.3.2",
     "pnpm": "8.6.0",
