feat: use mts cts export map

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hebilicious/nuxt-module-template",
+  "name": "nuxt-module-template",
   "type": "module",
   "version": "0.0.1",
   "private": true,
