--- a/docs/package.json
+++ b/docs/package.json
@@ -1,13 +1,11 @@
 {
   "private": true,
   "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
-    "generate": "nuxi generate",
-    "preview": "nuxi preview"
+    "docs:dev": "vitepress dev",
+    "docs:build": "vitepress build",
+    "docs:preview": "vitepress preview"
   },
   "devDependencies": {
-    "@nuxt-themes/docus": "^1.12.3",
-    "nuxt": "^3.5.3"
+    "vitepress": "1.0.0-beta.2"
   }
 }
