--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "packageManager": "pnpm@8.6.3",
   "scripts": {
-    "build": "rimraf packages/*/dist && pnpm -r --filter=./packages/* run build",
-    "nx:build": "nx run-many --target=build --p @hebilicious/my-module",
+    "build": "rimraf packages/*/dist && turbo run build --filter=@hebilicious/my-module",
+    "turbo:build": "turbo run build",
     "lint": "eslint --cache .",
     "lint:fix": "nr lint --fix",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
@@ -25,13 +25,13 @@
     "esno": "^0.16.3",
     "fast-glob": "^3.2.12",
     "lint-staged": "^13.2.2",
-    "nx": "^16.3.2",
-    "pnpm": "8.6.3",
+    "pnpm": "8.6.0",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
     "simple-git-hooks": "^2.8.1",
-    "taze": "^0.10.2",
-    "tsup": "^7.0.0",
+    "taze": "^0.10.1",
+    "tsup": "^6.7.0",
+    "turbo": "^1.10.3",
     "typescript": "^5.1.3",
     "unbuild": "^1.2.1",
     "vitest": "^0.32.2"
