--- a/packages/my-module/package.json
+++ b/packages/my-module/package.json
@@ -11,18 +11,17 @@
   "repository": "Hebilicious/nuxt-module-template",
   "exports": {
     ".": {
-      "types": "./dist/module.d.ts",
       "require": {
-        "default": "./dist/module.cjs",
-        "types": "./dist/module.d.cts"
+        "types": "./dist/module.d.cts",
+        "default": "./dist/module.cjs"
       },
       "import": {
-        "default": "./dist/module.mjs",
-        "types": "./dist/module.d.mts"
+        "types": "./dist/module.d.mts",
+        "default": "./dist/module.mjs"
       },
+      "types": "./dist/module.d.ts",
       "default": "./dist/module.mjs"
-    },
-    "./*": "./*"
+    }
   },
   "main": "./dist/module.cjs",
   "module": "./dist/module.mjs",
