--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.6",
     "@antfu/ni": "^0.21.4",
+    "@hebilicious/eslint-config": "0.0.3-beta.1",
     "@nuxt/test-utils": "^3.6.1",
     "@types/node": "^18.16.18",
     "bumpp": "^9.1.1",
