--- a/package.json
+++ b/package.json
@@ -1,39 +1,43 @@
 {
   "name": "nuxt-module-template",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@8.6.12",
+  "workspaces": [
+    "packages/*",
+    "playgrounds/*",
+    "test",
+    "docs"
+  ],
   "scripts": {
-    "build": "rimraf packages/*/dist && turbo run build --filter=@hebilicious/my-module",
-    "turbo:build": "turbo run build",
+    "build": "rimraf packages/*/dist && cd packages/nuxt-module-template && bun run build",
     "lint": "eslint --cache .",
-    "lint:fix": "nr lint --fix",
+    "lint:fix": "bun run lint --fix",
+    "docs:dev": "cd docs && vitepress dev",
+    "docs:build": "cd docs && vitepress build",
+    "prepare:types": "cd packages/nuxt-module-template && nuxi prepare",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "release": "pnpm lint:fix && bumpp -r -x \"pnpm run changelog\" --all",
+    "publish:ci": "pnpm -r publish --access public --no-git-checks",
     "typecheck": "tsc --noEmit",
     "test": "vitest"
   },
   "devDependencies": {
-    "@antfu/ni": "^0.21.5",
     "@hebilicious/eslint-config": "0.0.3-beta.3",
-    "@nuxt/test-utils": "^3.6.5",
-    "@types/node": "^18.17.8",
+    "@nuxt/test-utils": "^3.7.0",
+    "@types/node": "^18.17.13",
     "bumpp": "^9.2.0",
-    "conventional-changelog-cli": "^3.0.0",
-    "eslint": "8.47.0",
-    "esno": "^0.17.0",
-    "fast-glob": "^3.3.1",
+    "conventional-changelog-cli": "^4.0.0",
+    "eslint": "8.48.0",
+    "eslint-plugin-import": "^2.28.1",
     "lint-staged": "^14.0.1",
-    "pnpm": "8.6.12",
-    "prettier": "^3.0.2",
+    "pnpm": "8.7.1",
+    "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
     "simple-git-hooks": "^2.9.0",
     "taze": "^0.11.2",
-    "turbo": "^1.10.12",
-    "typescript": "^5.1.6",
-    "unbuild": "^1.2.1",
-    "vitest": "^0.34.2"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.3"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
