--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "extends": "./packages/my-module/.nuxt/tsconfig.json",
+  "extends": "./packages/nuxt-module-template/.nuxt/tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "#imports": ["./packages/my-module/node_modules/nuxt/app.d.ts"],
-      "#app": ["./packages/my-module/node_modules/nuxt/dist/app"]
+      "#imports": ["./node_modules/nuxt/app.d.ts"],
+      "#app": ["./node_modules/nuxt/dist/app"],
     }
   },
   "exclude": [
