--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "#imports": ["./node_modules/nuxt/app.d.ts"],
-      "#app": ["./node_modules/nuxt/dist/app"],
+      "#app": ["./node_modules/nuxt/dist/app"]
     }
   },
   "exclude": [
