feat: migrate to bun (#24)

--- a/packages/nuxt-module-template/package.json
+++ b/packages/nuxt-module-template/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@hebilicious/my-module",
+  "name": "@hebilicious/nuxt-module-template",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "author": {
     "name": "Hebilicious",
     "email": "xsh4k3@gmail.com",
@@ -33,24 +33,26 @@
     "*.mjs"
   ],
   "scripts": {
-    "dts": "esno scripts/dts.ts",
-    "readme": "esno scripts/readme.ts",
-    "postbuild": "pnpm dts && pnpm readme",
-    "build:module": "nuxt-build-module",
-    "build": "rimraf dist && pnpm build:module && pnpm postbuild",
+    "readme": "bun scripts/readme.ts",
+    "prebuild": "bun postinstall",
     "postinstall": "nuxi prepare",
+    "postbuild": "bun readme",
+    "build:stub": "nuxt-build-module --stub",
+    "build:module": "nuxt-build-module",
+    "build": "rimraf dist && bun build:module",
     "dev": "nuxi dev"
   },
   "peerDependencies": {
-    "nuxt": "latest",
+    "nuxt": "^3.7.0",
     "vite": "*"
   },
   "dependencies": {
-    "@nuxt/kit": "3.6.5",
+    "@nuxt/kit": "3.7.0",
     "defu": "^6.1.2"
   },
   "devDependencies": {
-    "@nuxt/module-builder": "^0.4.0",
-    "h3": "^1.8.0"
+    "@nuxt/module-builder": "^0.5.1",
+    "h3": "^1.8.1",
+    "nuxt": "^3.7.0"
   }
 }
