--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,17 +17,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-
+      - uses: ./.github/workflows/actions/pnpm
+  
       - run: bun x changelogithub
         continue-on-error: false
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-
-      - name: Install
-        run: bun install
 
       - name: Build
         run: bun run build
