--- a/docs/package.json
+++ b/docs/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@hebilicious/my-module_docs",
+	"name": "@hebilicious/nuxt-module-template_docs",
 	"private": true,
 	"type": "module",
 	"scripts": {
@@ -8,6 +8,6 @@
 		"preview": "vitepress preview"
 	},
 	"devDependencies": {
-		"vitepress": "1.1.3"
+		"vitepress": "^1.5.0"
 	}
 }
