--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
 	"name": "nuxt-module-template",
 	"type": "module",
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"private": true,
-	"workspaces": ["packages/*", "playgrounds/*", "test", "docs"],
 	"scripts": {
 		"build": "rimraf packages/*/dist && cd packages/nuxt-module-template && bun run build",
 		"format": "dprint check --verbose",
 		"format:fix": "dprint fmt --verbose",
 		"docs:dev": "cd docs && vitepress dev",
 		"docs:build": "cd docs && vitepress build",
-		"prepare:types": "cd packages/nuxt-module-template && nuxi prepare",
 		"changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
 		"release": "bun format:fix && bumpp -r -x \"bun run changelog\" --all",
-		"typecheck": "tsc --noEmit",
+		"prepare:types": "cd packages/nuxt-module-template && nuxi prepare",
+		"typecheck": "cd packages/nuxt-module-template && tsc --noEmit",
 		"test": "vitest",
 		"publish:ci": "pnpm -r publish --access public --no-git-checks",
 		"test:all": "bun run lint && bun run typecheck && bun run vitest run"
@@ -42,6 +41,8 @@
 		"pre-commit": "pnpx lint-staged"
 	},
 	"lint-staged": {
-		"*.{js,ts,tsx,vue,md}": ["dprint fmt --verbose"]
+		"*.{js,ts,tsx,vue,md}": [
+			"dprint fmt --verbose"
+		]
 	}
 }
