--- a/packages/nuxt-module-template/package.json
+++ b/packages/nuxt-module-template/package.json
@@ -26,12 +26,7 @@
 	"main": "./dist/module.cjs",
 	"module": "./dist/module.mjs",
 	"types": "./dist/types.d.ts",
-	"files": [
-		"dist",
-		"*.d.ts",
-		"*.cjs",
-		"*.mjs"
-	],
+	"files": ["dist", "*.d.ts", "*.cjs", "*.mjs"],
 	"scripts": {
 		"readme": "bun scripts/readme.ts",
 		"prebuild": "bun postinstall",
