--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,9 @@ jobs:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
 
       - uses: ./.github/workflows/actions/install
-
+        with:
+          install: nuxt-module-template
+          
       - name: Format
         run: bun run format
 
