--- a/package.json
+++ b/package.json
@@ -1,50 +1,46 @@
 {
-  "name": "nuxt-module-template",
-  "type": "module",
-  "version": "0.0.0",
-  "private": true,
-  "workspaces": [
-    "packages/*",
-    "playgrounds/*",
-    "test",
-    "docs"
-  ],
-  "scripts": {
-    "build": "rimraf packages/*/dist && cd packages/nuxt-module-template && bun run build",
-    "lint": "eslint --cache .",
-    "lint:fix": "bun run lint --fix",
-    "docs:dev": "cd docs && vitepress dev",
-    "docs:build": "cd docs && vitepress build",
-    "prepare:types": "cd packages/nuxt-module-template && nuxi prepare",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "release": "pnpm lint:fix && bumpp -r -x \"pnpm run changelog\" --all",
-    "publish:ci": "pnpm -r publish --access public --no-git-checks",
-    "typecheck": "tsc --noEmit",
-    "test": "vitest"
-  },
-  "devDependencies": {
-    "@hebilicious/eslint-config": "0.0.3-beta.3",
-    "@nuxt/test-utils": "^3.12.1",
-    "@types/node": "^20.12.7",
-    "bumpp": "^9.4.0",
-    "conventional-changelog-cli": "^4.1.0",
-    "eslint": "8.57.0",
-    "eslint-plugin-import": "^2.29.1",
-    "lint-staged": "^14.0.1",
-    "pnpm": "8.15.7",
-    "prettier": "^3.2.5",
-    "rimraf": "^5.0.5",
-    "simple-git-hooks": "^2.11.1",
-    "taze": "^0.13.6",
-    "typescript": "^5.4.5",
-    "vitest": "^0.34.6"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "npx lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,ts,tsx,vue,md}": [
-      "eslint --cache --fix"
-    ]
-  }
+	"name": "nuxt-module-template",
+	"type": "module",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"build": "rimraf packages/*/dist && cd packages/nuxt-module-template && bun run build",
+		"format": "dprint check --verbose",
+		"format:fix": "dprint fmt --verbose",
+		"docs:dev": "cd docs && vitepress dev",
+		"docs:build": "cd docs && vitepress build",
+		"changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+		"release": "bun format:fix && bumpp -r -x \"bun run changelog\" --all",
+		"prepare:types": "cd packages/nuxt-module-template && nuxi prepare",
+		"typecheck": "cd packages/nuxt-module-template && tsc --noEmit",
+		"test": "vitest",
+		"publish:ci": "pnpm -r publish --access public --no-git-checks",
+		"test:all": "bun run lint && bun run typecheck && bun run vitest run"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@nuxt/test-utils": "^3.14.4",
+		"@types/node": "^22.9.1",
+		"bumpp": "^9.8.1",
+		"conventional-changelog-cli": "^5.0.0",
+		"dprint": "^0.47.5",
+		"lint-staged": "^15.2.10",
+		"rimraf": "^5.0.10",
+		"simple-git-hooks": "^2.11.1",
+		"taze": "^0.18.0",
+		"typescript": "^5.6.3",
+		"vitest": "^2.1.5"
+	},
+	"engines": {
+		"bun": "1.1.34",
+		"node": "22.9.0",
+		"pnpm": "9.14.2"
+	},
+	"packageManager": "pnpm@9.14.2",
+	"simple-git-hooks": {
+		"pre-commit": "pnpx lint-staged"
+	},
+	"lint-staged": {
+		"*.{js,ts,tsx,vue,md}": ["dprint fmt --verbose"]
+	}
 }
