--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,6 @@
 # We use pnpm to publish https://github.com/oven-sh/bun/issues/1976
 packages:
   - packages/**
+  - playgrounds
+  - test/fixtures/**
+  - docs
